@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/08/12 03:38:11 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2004/08/25 18:51:08 minskim Exp $
 #
 
-DISTNAME=	hre-0.9.7
+DISTNAME=	hre-0.9.8
 CATEGORIES=	textproc
-MASTER_SITES=	http://kldp.net/download.php/1438/
+MASTER_SITES=	http://kldp.net/download.php/1466/
 
 MAINTAINER=	pyrasis@chol.com
 HOMEPAGE=	http://hre.kldp.net/
